<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group_0778.project.SearchActivity"
    android:background="@android:color/darker_gray">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_flights"
        android:id="@+id/search_flight_field"
        android:background="@android:color/background_light"
        android:typeface="monospace"
        android:onClick="startSearchFlightsActivity"
        android:layout_below="@+id/destinationField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_itineraries"
        android:id="@+id/search_itineraries_field"
        android:background="@android:color/background_light"
        android:typeface="monospace"
        android:onClick="startSearchItinerariesActivity"
        android:layout_alignTop="@+id/search_flight_field"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/travelOriginField"
        android:background="@android:color/white"
        android:hint="Enter Departure Origin"
        android:gravity="center_horizontal"
        android:layout_marginTop="74dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/departureDateField"
        android:inputType="textCapWords"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destinationField"
        android:background="@android:color/white"
        android:hint="Enter Destination"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/travelOriginField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/search_itineraries_field"
        android:layout_alignEnd="@+id/search_itineraries_field"
        android:inputType="textCapWords"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/departureDateField"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:layout_toStartOf="@+id/search_itineraries_field"
        android:hint="@string/departure_date"
        android:gravity="center_horizontal"
        android:layout_alignRight="@+id/destinationField"
        android:layout_alignEnd="@+id/destinationField"
        android:inputType="text"/>

</RelativeLayout>
